# plot-vr

./: .gitignore  CLAUDE.md  README.md  a-frame sample.html  generate_preview.py  pyproject.toml  try_plot_aframe.py  try_plotvr.ipynb  try_plotvr.py
.claude/: settings.local.json
PlotVR/: __init__.py  _artists.py  _base.py  _base_backend.py  _plotvr.py  _scene_template.html
tests/: conftest.py  test_api.py  test_artists.py  test_draw_image.py  test_events.py
